--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -106,7 +106,7 @@
 	padding:		0.2em;
 	margin-top:		1.2em;	/* Should align with the bottom of the line */
 	border:			1px solid black;
-	-moz-box-shadow:	5px 5px 5px grey;
+	box-shadow:	5px 5px 5px grey;
 	-webkit-box-shadow:	5px 5px 5px grey;
 }
 
