--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -365,15 +365,17 @@ input[type="checkbox"].mark-check {
 	background-color:	white;
 	overflow:		auto;
 
+/*
 	border-left-width:	1px;
 	border-left-style:	solid;
 	border-left-color:	white;
+*/
 }
 
 /* Mark the currently-selected item with a blue left border */
 .current-item .item-summary,
 .current-item .item-content {
-	border-left-color:	#6060ff;
+/*	border-left-color:	#6060ff;*/
 /* Attempt at making a more interesting gradient background for the current item.
 	background-image:
 		-webkit-gradient(linear, left top, right top,
@@ -382,6 +384,7 @@ input[type="checkbox"].mark-check {
 				 color-stop(3%, white),
 				 to(white));
 */
+box-shadow:	0px 0px 10px rgb(0, 0, 0) inset;
 }
 
 .content-panes[collapsible="yes"] .item-summary {
