Moving toward having custom checkbox images, rather than the browser-default ones, to make them more clickable on small screens.

--- a/htdocs/skins/fancy/android.css
+++ b/htdocs/skins/fancy/android.css
@@ -122,9 +122,13 @@ input[type="checkbox"] {
 	-webkit-appearance:	checkbox;
 }
 
-input[type="checkbox"].mark-check {
+.mark-check + label {
 	width:			3.0em;
 	height:			3.0em;
+}
+
+.mark-check:checked + label {
+/* XXX - What goes here? */
 }
 
 input[type="submit"],
