--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -82,7 +82,44 @@ p {
 
 /* navbar */
 #navbar {
-	background-color:	rgba(0, 0, 0, 0.5);
+/*	background-color:	rgba(0, 0, 0, 0.5);*/
+	background-image:
+		linear-gradient(
+			0deg,
+			rgba(0, 0, 0, 0.5),
+			rgba(0, 0, 0, 0.2));
+	/* For Android browser */
+	background-image:
+		-webkit-gradient(linear, left top, left bottom,
+			from(rgba(0, 0, 0, 0.2)),
+			to(rgba(0, 0, 0, 0.5)));
+	color:		white;
+/*	border-top-left-radius:		1em;*/
+	border-top-right-radius:	1em;
+
+	position:	fixed;
+/*	top:		0px;*/
+	bottom:		0px;
+	left:		0px;
+/*	right:		0px;*/
+	width:		100%;
+	z-index:	10;
+}
+
+#navbar a {
+	box-shadow:	2px 2px 6px black;
+}
+
+#navbar ul {
+	display:	inline;
+}
+
+#navbar li {
+	display:	inline;
+}
+
+#navbar .content a {
+	text-decoration:	none;
 }
 
 #navbar.closed .close-button,
