--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -4,17 +4,16 @@
 
 @font-face {
 	font-family:	'Roboto Thin';
-	src:	url('Roboto-Thin-webfont.woff') format('woff'),
-		url('Roboto-Thin-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+	src:		url('Roboto-Thin-webfont.woff') format('woff')
+	font-weight:	normal;
+	font-style:	normal;
 }
 
 @font-face {
 	font-family:	'Roboto';
-	src:	url('Roboto-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
+	src:		url('Roboto-Regular.ttf') format('truetype');
+	font-weight:	normal;
+	font-style:	normal;
 }
 
 h1 {
