--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -4,20 +4,24 @@
 
 @font-face {
 	font-family:	'Roboto Thin';
-	src:		url('Roboto-Thin-webfont.woff') format('woff')
+	src:		url('Roboto-Thin-webfont.woff') format('woff');
 	font-weight:	normal;
 	font-style:	normal;
 }
 
 @font-face {
 	font-family:	'Roboto';
-	src:		url('Roboto-Regular.ttf') format('truetype');
+	src:		url('Roboto-Regular-webfont.woff') format('woff');
 	font-weight:	normal;
 	font-style:	normal;
 }
 
 h1 {
-	font-family:	"Roboto Thin", Arial, sans-serif;
+	font-family:		"Roboto Thin", Arial, sans-serif;
+}
+
+.tools {
+	font-family:		"Roboto", Arial, sans-serif;
 }
 
 #feeds {
@@ -28,6 +32,8 @@ h1 {
 
 #feeds th {
 	text-align:		left;
+	font-family:		"Roboto", Arial, sans-serif;
+	font-weight:		bold;
 }
 
 #feeds tr {
