--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -4,15 +4,14 @@
 
 @font-face {
 	font-family:	'Roboto Thin';
-	src:		url('Roboto-Thin-webfont.woff') format('woff'),
-			url('Roboto-Thin-webfont.ttf') format('truetype');
+	src:		url('Roboto-Thin-webfont.woff') format('woff');
 	font-weight:	normal;
-    font-style:		normal;
+	font-style:	normal;
 }
 
 @font-face {
 	font-family:	'Roboto';
-	src:		url('Roboto-Regular.ttf') format('truetype');
+	src:		url('Roboto-Regular-webfont.woff') format('woff');
 	font-weight:	normal;
 	font-style:	normal;
 }
@@ -70,6 +69,7 @@ p {
 	padding-left:		1em;
 	padding-top:		0px;
 	padding-bottom:		0.2em;
+	font-family:		"Roboto", arial, sans-serif;
 }
 
 .feed-tools li {
