--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -170,7 +170,7 @@ input[type="submit"] {
 */
 
 .button-box button {
-	font-family:		"Roboto Thin", Arial, sans-serif;
+	font-family:		"Roboto", Arial, sans-serif;
 }
 
 #itemlist {
@@ -655,7 +655,7 @@ box-shadow:	0px 0px 10px rgb(0, 0, 0) inset;
 }
 
 .item-footer .bottom-links li:before {
-	content:		" | "
+	content:		" | ";
 }
 
 .item-footer .mark-td {
