--- a/htdocs/skins/fancy/view.css
+++ b/htdocs/skins/fancy/view.css
@@ -204,6 +204,7 @@ input[type="submit"] {
 
 .item.old1d .item-header {
 	/* This should only apply to Safari and other webkit browsers */
+/*
 	background-image:
 		-webkit-gradient(linear, left top, left bottom,
 			from(#0000cc),
@@ -212,6 +213,7 @@ input[type="submit"] {
 		-moz-linear-gradient(top,
 			#0000cc,
 			#000066);
+*/
 	border-top-color:	#0000cc;
 	border-bottom-color:	#000066;
 }
