New font for list of feeds is more readable on small devices.

--- a/htdocs/skins/fancy/index.css
+++ b/htdocs/skins/fancy/index.css
@@ -25,6 +25,8 @@ h1 {
 }
 
 #feeds {
+	font-family:	"Roboto", Arial, sans-serif;
+	font-size:	medium;
 	background-color:	white;
 	border-collapse:	collapse;
 	width:			100%;
