--- a/htdocs/skins/fancy/editfeed.css
+++ b/htdocs/skins/fancy/editfeed.css
@@ -14,6 +14,11 @@
 	background-color:	orange;
 }
 
+#show-feed th.section-title {
+	text-align:		left;
+	font-size:		120%;
+}
+
 #show-feed td {
 	border:			1px solid red;
 	background-color:	cyan;
