--- a/htdocs/css/index.css
+++ b/htdocs/css/index.css
@@ -147,7 +147,7 @@ h1 {
 }
 
 body {
-	background-image:	url(gray-bg.jpg);
+	background-image:	url(../images/gray-bg.jpg);
 	margin-top:		0px;
 	margin-left:		0px;
 }
