--- a/htdocs/css/index.css
+++ b/htdocs/css/index.css
@@ -4,14 +4,14 @@
 
 @font-face {
 	font-family:	'Roboto Thin';
-	src:		url('Roboto-Thin-webfont.woff') format('woff');
+	src:		url('../fonts/Roboto-Thin-webfont.woff') format('woff');
 	font-weight:	normal;
 	font-style:	normal;
 }
 
 @font-face {
 	font-family:	'Roboto';
-	src:		url('Roboto-Regular-webfont.woff') format('woff');
+	src:		url('../fonts/Roboto-Regular-webfont.woff') format('woff');
 	font-weight:	normal;
 	font-style:	normal;
 }
