Move .error-msg style from a page that doesn't have any error messages anymore, to one that does, but has no style.

--- a/htdocs/css/addfeed.css
+++ b/htdocs/css/addfeed.css
@@ -11,3 +11,11 @@ th#th-feed-list {
 	padding-bottom:		0px;
 	padding-left:		0px;
 }
+
+.error-msg {
+	border:			2px solid red;
+	color:			red;
+	margin-left:		2em;
+	margin-right:		2em;
+	margin-bottom:		0.5em;
+}
