iPad mode on all devices, since something broke on iPad, such that it doesn't get reognized as such anymore.

--- a/htdocs/css/desktop.css
+++ b/htdocs/css/desktop.css
@@ -2,5 +2,6 @@
  * Stylesheet specific to desktop (not mobile) browsers.
  */
 .button-box-left {
-	display:	none;
+    /*	display:	none;*/
+    outline:	1px solid green;
 }
