--- a/htdocs/css/view.css
+++ b/htdocs/css/view.css
@@ -14,6 +14,7 @@ body {
 }
 
 /* Rules for small screens */
+/*
 @media screen and (max-width: 4in) {
 	.button-box-left {
 		display:	none;
@@ -39,6 +40,7 @@ body {
 		display:		table-cell;
 	}
 }
+*/
 
 /* Rules for big screens */
 /*@media screen and (min-width: 6in) {*/
